Fix photo appearance on mobile and web

--- a/css/general.css
+++ b/css/general.css
@@ -16,6 +16,10 @@
     font-family: Quicksand;
 }
 
+body,html {
+    height: 100%;
+}
+
 .flex-container {
     display: flex;
     flex-direction: column;
