--- a/css/parallax.css
+++ b/css/parallax.css
@@ -3,11 +3,11 @@
     background-image: url("../photos/stalker_shot.jpeg");
 
     /* Full height */
-    height: 800px;
+    height: 100%;
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
-    background-position: center;
+    background-position: 66.5%;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
